# AI4SE_Coding_Agent_Harness

./: .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  AGENTS.md  AGENT_LOG.md  PLAN.md  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  pyproject.toml
.github/workflows/: ci.yml
.superpowers/sdd/: final-review-package.md  final-review.md  progress.md  task-1-brief.md  task-1-report.md  task-1-review-package.md  task-1-review.md  task-10-brief.md  task-10-report.md  task-10-review-package.md  task-10-review.md  task-11-brief.md  task-11-report.md  task-11-review-package.md  task-11-review.md  task-12-brief.md  task-12-report.md  task-12-review-package.md  task-12-review.md  task-2-brief.md  task-2-report.md  task-2-review-package.md  task-2-review.md  task-3-brief.md  task-3-report.md  task-3-review-package.md  task-3-review.md  task-4-brief.md  task-4-report.md  task-4-review-package.md  task-4-review.md  task-5-brief.md  task-5-report.md  task-5-review-package.md  task-5-review.md  task-6-brief.md  task-6-report.md  task-6-review-package.md  task-6-review.md  task-7-brief.md  (+11 more)
demo/: README.md  mechanism_demo.py  ui_preview.py
scripts/: log_agent.py
src/ai4se_agent/: cli.py  types.py
tests/: test_cli.py
tests/cli/: test_renderer.py  test_session.py
tests/config/: test_loader.py
tests/context/: test_builder.py  test_prompt_section.py  test_workspace.py
tests/core/: test_action.py  test_action_json.py  test_agent_state.py  test_event_bus.py  test_events.py  test_interrupt.py  test_state_machine.py  test_types.py
tests/feedback/: test_loop.py  (+4 more)
(+89 files in other folders)
