[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai4se-agent"
version = "0.1.0"
description = "A coding agent harness with feedback-driven self-correction loop"
readme = "README.md"
authors = [{ name = "AI4SE Student" }]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "transitions>=0.9.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[project.scripts]
ai4se-agent = "ai4se_agent.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]